# monero-coinflip

./: Cargo.toml  cookies.txt
src/: db.rs  main.rs
src/middlewares/: auth.rs
src/models/: admin_balance.rs  game.rs  mod.rs  transaction.rs  user.rs
src/routes/: auth.rs  games.rs
